# pi_code

./: CMakeLists.txt  ble_server.py  install_dependencies.sh
src/: ble_server.cpp  ble_server.hpp  config.hpp  main.cpp  sensor_data.cpp  sensor_data.hpp
